# banglish

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.c
src/builtin/: alias.c  alias.h  cd.h  echo.h  exit_cmd.c  exit_cmd.h  help.c  help.h  history_cmd.c  history_cmd.h  jobs_cmd.h  pwd.c  pwd.h  registry.c  registry.h  source.c  source.h  type_cmd.c  type_cmd.h  unset.c  unset.h  which_cmd.c  which_cmd.h
src/core/: env.c  env.h  shell.c  shell.h  signal.c  signal.h
src/exec/: eval.c  eval.h  job.c  job.h
src/info/: info.c  info.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/parser/: parser.c  parser.h
src/scripting/: funcstore.h
src/utils/: memory.c  memory.h  str.c  str.h  vec.c  vec.h
